@@ -197,6 +197,35 @@ fi
 
 AM_CONDITIONAL(WITH_ASPELL, test "$build_aspell" = yes)
 
+check_voikko=yes
+build_voikko=no
+
+AC_ARG_ENABLE(voikko, [  --disable-voikko     enable the voikko backend [default=auto]], check_voikko="$enableval", check_voikko=yes)
+
+AC_ARG_WITH(voikko-prefix, [  --with-voikko-prefix=DIR
+                          specify under which prefix voikko is installed.], voikko_prefix="$withval", )
+
+if test "x$check_voikko" != "xno"; then
+   saved_LDFLAGS=$LDFLAGS
+
+   VOIKKO_INC=
+   VOIKKO_LIBS="-lvoikko"
+   if test "x$voikko_prefix" != "x"; then
+       LDFLAGS="-L$voikko_prefix/lib "$LDFLAGS
+       VOIKKO_INC="-I$voikko_prefix/include"
+       VOIKKO_LIBS="-L$voikko_prefix/lib "$VOIKKO_LIBS
+   fi
+
+   AC_CHECK_LIB(voikko,voikko_init,build_voikko=yes)
+
+   LDFLAGS=$saved_LDFLAGS
+
+   AC_SUBST(VOIKKO_INC)
+   AC_SUBST(VOIKKO_LIBS)
+fi
+
+AM_CONDITIONAL(WITH_VOIKKO, test "$build_voikko" = yes)
+
 build_uspell=no
 
 check_uspell=yes
@@ -266,6 +295,7 @@ src/uspell/Makefile
 src/myspell/Makefile
 src/hspell/Makefile
 src/applespell/Makefile
+src/voikko/Makefile
 tests/Makefile
 tests/ispell
 doc/Makefile
@@ -291,5 +321,6 @@ $PACKAGE-$VERSION
 	Build Uspell backend:           ${build_uspell}
 	Build Hspell backend:           ${build_hspell}
 	Build Myspell/Hunspell backend: ${build_myspell}
+	Build Voikko backend:           ${build_voikko}
 	Build a relocatable library:	${relocatable_library}
 "
