@@ -1,4 +1,6 @@
 *:myspell,aspell,ispell
+fi:voikko,ispell,myspell,aspell
+fi_FI:voikko,ispell,myspell,aspell
 he:hspell,myspell
 he_IL:hspell,myspell
 yi:uspell
